--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
-<a href="week13.html"><b>13P</b></a><br>
+<a href="week13.html"><b>13</b></a>
+<a href="week14.html"><b>14P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -72,41 +73,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>10540</font></td>
-    <td><font size=2>7015</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>11120</font></td>
+    <td><font size=2>7885</font></td>
     <td><font size=2>1555</font></td>
-    <td><font size=2>605</font></td>
+    <td><font size=2>580</font></td>
     <td><font size=2>5</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8230</font></td>
-    <td><font size=2>7745</font></td>
+    <td><font size=2>9085</font></td>
+    <td><font size=2>8235</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>8245</font></td>
-    <td><font size=2>8030</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>8635</font></td>
+    <td><font size=2>8760</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7560</font></td>
-    <td><font size=2>8010</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8020</font></td>
+    <td><font size=2>8515</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7275</font></td>
-    <td><font size=2>7365</font></td>
+    <td><font size=2>8005</font></td>
+    <td><font size=2>7755</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>240</font></td>
     <td><font size=2>0</font></td></tr>
@@ -118,43 +119,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
+<tr><td><font size=2>Steven(2)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>8620</font></td>
+    <td><font size=2>8000</font></td>
+    <td><font size=2>1125</font></td>
+    <td><font size=2>255</font></td>
+    <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7710</font></td>
-    <td><font size=2>8665</font></td>
+    <td><font size=2>8215</font></td>
+    <td><font size=2>9125</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>85</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Steven(2)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7700</font></td>
-    <td><font size=2>7530</font></td>
-    <td><font size=2>1125</font></td>
-    <td><font size=2>255</font></td>
-    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Mike(4)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>6540</font></td>
-    <td><font size=2>7250</font></td>
-    <td><font size=2>790</font></td>
+    <td><font size=2>7410</font></td>
+    <td><font size=2>7830</font></td>
+    <td><font size=2>870</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7175</font></td>
-    <td><font size=2>8055</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7645</font></td>
+    <td><font size=2>8975</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6580</font></td>
-    <td><font size=2>7890</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7070</font></td>
+    <td><font size=2>8745</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
     <td><font size=2>1</font></td></tr>
