--- a/week13.html
+++ b/week13.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>125</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>30</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>130</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>45</td></tr>
 <tr><td>VJefferson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>75</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>55</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>460</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Drake</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>195</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>85</td></tr>
+<tr><td>Drake</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Robinson</td>      <td></td><td align=right>35</td></tr>
+<tr><td>MThomas</td>       <td></td><td align=right>50</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Prater</td>        <td></td><td align=right>20</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>70</td></tr>
+<tr><td></td>              <td></td><td align=right>505</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>265</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>90</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>85</td></tr>
+<tr><td>Woods</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>275</td></tr>
+<tr><td>Gonzalez</td>      <td></td><td align=right>20</td></tr>
+<tr><td>Taylor</td>        <td></td><td align=right>145</td></tr>
+<tr><td></td>              <td></td><td align=right>920</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
-<tr><td>Roethlisberger</td><td></td><td align=right>0</td></tr>
+<tr><td>Roethlisberger</td><td></td><td align=right>175</td></tr>
 <tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>35</td></tr>
+<tr><td>Goedert</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>95</td></tr>
+<tr><td></td>              <td></td><td align=right>470</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Watson</td>        <td></td><td align=right>160</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>265</td></tr>
 <tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>160</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Gesicki</td>       <td></td><td align=right>90</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>70</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>60</td></tr>
+<tr><td></td>              <td></td><td align=right>855</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>345</td></tr>
 <tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Lindsay</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Cooper</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ebron</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Ebron</td>         <td></td><td align=right>30</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>65</td></tr>
 <tr><td>Jeudy</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>490</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (4)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Hines</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Beasley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>90</td></tr>
+<tr><td>Hines</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>185</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Beasley</td>       <td></td><td align=right>115</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>165</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>150</td></tr>
+<tr><td>JRobinson</td>     <td></td><td align=right>85</td></tr>
+<tr><td></td>              <td></td><td align=right>870</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>150</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Dobbins</td>       <td></td><td align=right>85</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>185</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>40</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>65</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>580</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gaskin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>115</td></tr>
+<tr><td>Gaskin</td>        <td></td><td align=right>70</td></tr>
+<tr><td>White</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>25</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>110</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>70</td></tr>
+<tr><td></td>              <td></td><td align=right>390</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Booker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>135</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>140</td></tr>
+<tr><td>Booker</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>40</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Tonyan</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>115</td></tr>
+<tr><td>Akers</td>         <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>730</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -168,41 +168,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>10540</font></td>
-    <td><font size=2>7015</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>11120</font></td>
+    <td><font size=2>7885</font></td>
     <td><font size=2>1555</font></td>
-    <td><font size=2>605</font></td>
+    <td><font size=2>580</font></td>
     <td><font size=2>5</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8230</font></td>
-    <td><font size=2>7745</font></td>
+    <td><font size=2>9085</font></td>
+    <td><font size=2>8235</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>8245</font></td>
-    <td><font size=2>8030</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>8635</font></td>
+    <td><font size=2>8760</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7560</font></td>
-    <td><font size=2>8010</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8020</font></td>
+    <td><font size=2>8515</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7275</font></td>
-    <td><font size=2>7365</font></td>
+    <td><font size=2>8005</font></td>
+    <td><font size=2>7755</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>240</font></td>
     <td><font size=2>0</font></td></tr>
@@ -214,43 +214,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
+<tr><td><font size=2>Steven(2)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>8620</font></td>
+    <td><font size=2>8000</font></td>
+    <td><font size=2>1125</font></td>
+    <td><font size=2>255</font></td>
+    <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7710</font></td>
-    <td><font size=2>8665</font></td>
+    <td><font size=2>8215</font></td>
+    <td><font size=2>9125</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>85</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Steven(2)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7700</font></td>
-    <td><font size=2>7530</font></td>
-    <td><font size=2>1125</font></td>
-    <td><font size=2>255</font></td>
-    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Mike(4)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>6540</font></td>
-    <td><font size=2>7250</font></td>
-    <td><font size=2>790</font></td>
+    <td><font size=2>7410</font></td>
+    <td><font size=2>7830</font></td>
+    <td><font size=2>870</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7175</font></td>
-    <td><font size=2>8055</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7645</font></td>
+    <td><font size=2>8975</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6580</font></td>
-    <td><font size=2>7890</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7070</font></td>
+    <td><font size=2>8745</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
     <td><font size=2>1</font></td></tr>
