--- a/freeagt.html
+++ b/freeagt.html
@@ -1,23 +1,23 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2020 Free Agent Leaderboard<br>(Through week 12)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2020 Free Agent Leaderboard<br>(Through week 13)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
 <tr><td><font size=3>1)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3>1455</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Philip Rivers          </td><td><font size=3>1250</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 970</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 915</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Philip Rivers          </td><td><font size=3>1445</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Baker Mayfield         </td><td><font size=3>1170</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 970</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 870</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Nick Foles             </td><td><font size=3> 780</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Drew Lock              </td><td><font size=3> 770</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 520</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Nick Mullens           </td><td><font size=3> 505</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 450</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Drew Lock              </td><td><font size=3> 845</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Nick Foles             </td><td><font size=3> 780</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 700</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Nick Mullens           </td><td><font size=3> 655</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 650</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 540</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 490</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 490</td></tr>
 <tr><td><font size=3>14)</td><td><font size=3>Kyle Allen             </td><td><font size=3> 395</td></tr>
 <tr><td><font size=3>15)</td><td><font size=3>Dwayne Haskins         </td><td><font size=3> 385</td></tr>
 </table>
@@ -31,89 +31,89 @@
 <tr><td><font size=3>Tony Pollard           </td><td><font size=3> 305</td></tr>
 <tr><td><font size=3>Mark Ingram            </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Brian Hill             </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 225</td></tr>
 <tr><td><font size=3>Frank Gore             </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Alfred Morris          </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Peyton Barber          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Kerryon Johnson        </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Jalen Richard          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>JD McKissic            </td><td><font size=3> 140</td></tr>
 <tr><td><font size=3>Ito Smith              </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>Dion Lewis             </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>TJ Yeldon              </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Devonta Freeman        </td><td><font size=3> 110</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
 <tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 770</td></tr>
+<tr><td><font size=3>Marvin Jones           </td><td><font size=3> 690</td></tr>
+<tr><td><font size=3>Diontae Johnson        </td><td><font size=3> 665</td></tr>
+<tr><td><font size=3>Corey Davis            </td><td><font size=3> 625</td></tr>
 <tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 620</td></tr>
 <tr><td><font size=3>Keelan Cole            </td><td><font size=3> 595</td></tr>
-<tr><td><font size=3>Diontae Johnson        </td><td><font size=3> 580</td></tr>
 <tr><td><font size=3>Mike Williams          </td><td><font size=3> 575</td></tr>
 <tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 565</td></tr>
-<tr><td><font size=3>Marvin Jones           </td><td><font size=3> 535</td></tr>
+<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 540</td></tr>
 <tr><td><font size=3>Travis Fulgham         </td><td><font size=3> 530</td></tr>
 <tr><td><font size=3>David Moore            </td><td><font size=3> 530</td></tr>
 <tr><td><font size=3>Breshad Perriman       </td><td><font size=3> 465</td></tr>
 <tr><td><font size=3>Jamison Crowder        </td><td><font size=3> 460</td></tr>
-<tr><td><font size=3>Corey Davis            </td><td><font size=3> 460</td></tr>
 <tr><td><font size=3>Mecole Hardman         </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 415</td></tr>
-<tr><td><font size=3>Preston Williams       </td><td><font size=3> 365</td></tr>
+<tr><td><font size=3>Tre'Quan Smith         </td><td><font size=3> 390</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Trey Burton            </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Darren Fells           </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Richard Rodgers        </td><td><font size=3> 270</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Irv Smith              </td><td><font size=3> 210</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>OJ Howard              </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Adam Shaheen           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Tyler Kroft            </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jordan Reed            </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Austin Hooper          </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Marcedes Lewis         </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Donald Parham          </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Trey Burton            </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Darren Fells           </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Dan Arnold             </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Richard Rodgers        </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Jordan Reed            </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Irv Smith              </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>OJ Howard              </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Adam Shaheen           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Tyler Kroft            </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Austin Hooper          </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Marcedes Lewis         </td><td><font size=3> 175</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3>1020</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3>1010</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 910</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3> 825</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3>1065</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 915</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 865</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3> 860</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 845</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 830</td></tr>
+<tr><td><font size=3>Robbie Gould           </td><td><font size=3> 810</td></tr>
 <tr><td><font size=3>Chris Boswell          </td><td><font size=3> 790</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 785</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 765</td></tr>
-<tr><td><font size=3>Robbie Gould           </td><td><font size=3> 750</td></tr>
+<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 770</td></tr>
 <tr><td><font size=3>Mike Badgley           </td><td><font size=3> 730</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 685</td></tr>
-<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 680</td></tr>
-<tr><td><font size=3>Dan Bailey             </td><td><font size=3> 515</td></tr>
-<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>Dan Bailey             </td><td><font size=3> 585</td></tr>
+<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 545</td></tr>
 <tr><td><font size=3>Sam Ficken             </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>Sergio Castillo        </td><td><font size=3> 295</td></tr>
+<tr><td><font size=3>Sergio Castillo        </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>Josh Lambo             </td><td><font size=3> 265</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Gabriel Davis          </td><td><font size=3> 460</td></tr>
+<tr><td><font size=3>Gabriel Davis          </td><td><font size=3> 590</td></tr>
 <tr><td><font size=3>Sam Sloman             </td><td><font size=3> 325</td></tr>
+<tr><td><font size=3>Collin Johnson         </td><td><font size=3> 255</td></tr>
 <tr><td><font size=3>Michael Pittman        </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>Collin Johnson         </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>Harrison Bryant        </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Isaiah Rodgers         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Quintez Cephus         </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Tyler Johnson          </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Cole Kmet              </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Albert Okwuegbunam     </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Denzel Mims            </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Gabe Nabers            </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Joe Reed               </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Freddie Swain          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Denzel Mims            </td><td><font size=3>  95</td></tr>
-<tr><td><font size=3>JaMycal Hasty          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Cole Kmet              </td><td><font size=3>  75</td></tr>
 </table>
 </td></tr></table>
