--- a/week15.html
+++ b/week15.html
@@ -51,10 +51,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (4)</b></font></td></tr>
 <tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Gallman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hines</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
+<tr><td>Beasley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
